@@ -24,7 +24,7 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.chat.Style;
 import net.minecraft.network.chat.TextColor;
-import net.minecraft.network.chat.contents.PlainTextContents;
+import net.minecraft.network.chat.contents.LiteralContents;
 import net.minecraft.network.chat.contents.TranslatableContents;
 import org.jetbrains.annotations.Nullable;
 
@@ -50,7 +50,7 @@ public class FormatUtil {
 
     /**
      * Recursively converts any {@link TranslatableContents} elements of the 
-     * {@link MutableComponent} tree to {@link PlainTextContents} elements, 
+     * {@link MutableComponent} tree to {@link LiteralContents} elements, 
      * and in the process converts any format codes to {@link Style}s.
      */
     public static MutableComponent convertToStyledLiteral(MutableComponent text) 
@@ -64,7 +64,7 @@ public class FormatUtil {
         text.getSiblings().replaceAll(sibling -> convertToStyledLiteral(sibling.copy()));
         
         // Convert codes in contents
-        if (text.getContents() instanceof PlainTextContents) {
+        if (text.getContents() instanceof LiteralContents) {
             text = convertCodesToStyles(text);
         }
         
@@ -73,7 +73,7 @@ public class FormatUtil {
 
     /**
      * Converts the contents of the {@link MutableComponent} from 
-     * {@link TranslatableContents} to {@link PlainTextContents}.
+     * {@link TranslatableContents} to {@link LiteralContents}.
      * 
      * <p><b>Note:</b> Does not recurse, only affects root. Caller must recurse
      * if required.</p>
@@ -128,7 +128,7 @@ public class FormatUtil {
             if (split.isEmpty()) {
                 split.add(""); // Pad start
                 split.add(""); // Pad end
-            } else if (!string.endsWith(split.getLast())) {
+            } else if (!string.endsWith(split.get(split.size() - 1))) {
                 split.add(""); // Pad end only (start is already padded)
             }
 
@@ -185,8 +185,8 @@ public class FormatUtil {
                     }
                 }
                 // Add final translated substring
-                if (!split.getLast().isEmpty()) {
-                    siblings.add(Component.literal(split.getLast()));
+                if (!split.get(split.size() - 1).isEmpty()) {
+                    siblings.add(Component.literal(split.get(split.size() - 1)));
                 }
             }
         }
@@ -204,7 +204,7 @@ public class FormatUtil {
      * <p><b>Note:</b> does not recurse, only affects root.</p>
      */
     private static MutableComponent convertCodesToStyles(MutableComponent text) {
-        if (!(text.getContents() instanceof PlainTextContents contents)) return text;
+        if (!(text.getContents() instanceof LiteralContents contents)) return text;
         
         // Check whether conversion is required
         String str = contents.text();
